Agrega funcionalidad de habilitar y deshabilitar cosechas

--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -136,6 +136,10 @@ button.edit{
   border-radius: 40rem !important;
 }
 
+.edit.disabled{
+  border-color: #f5f5f5;
+}
+
 .trash{
   margin: 0 6px !important;
 
